--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p class="sub-heading">Made With ❤️ by Gummybearansh</p>
     </header>
     <div class="input-container">
-        <input type="text" id="inputBox">
+        <input type="text" id="inputBox" placeholder="Enter Your Task">
         <button onclick="addTodo()" id="inputBtn">Add To Do</button>
     </div>
     <div id="bigContainer">
