--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RECONCILER TODO</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <header class="header">
@@ -16,7 +20,7 @@
         <button onclick="addTodo()" id="inputBtn">Add To Do</button>
     </div>
     <div id="bigContainer">
-        <div id="todoContainer">
+        <div id="todoContainer"> 
         </div>
     </div>
 </body>
